Add adaptive and new info

--- a/index.html
+++ b/index.html
@@ -21,12 +21,24 @@
           <a class="logo" href="#">
             <div class="logo">IT Conductor</div>
           </a>
-          <nav class="menu">
+          <nav class="nav">
             <a href="index3.html">Front/Back-end</a>
             <a href="index4.html">UX/UI</a>
-            <a href="index2.html">Project Manager</a>
+            <a href="index2.html">PM</a>
             <a href="index5.html">QA</a>
           </nav>
+          <div class="burger">
+            <label>
+              <input type="checkbox" />
+              <span class="menu"> <span class="hamburger"></span> </span>
+              <ul>
+                <li><a href="index3.html">Front/Back-end</a></li>
+                <li><a href="index4.html">UX/UI</a></li>
+                <li><a href="index2.html">PM</a></li>
+                <li><a href="index5.html">QA</a></li>
+              </ul>
+            </label>
+          </div>
         </div>
       </header>
       <div class="greeting">
@@ -46,26 +58,26 @@
           <ul class="advantages_list">
             <li class="advantages_item">
               <img src="./img/iMac 1.png" alt="Computer" />
-              <p class="caption">Первое</p>
+              <p class="caption">Простота</p>
               <p class="description">
-                Имеется спорная точка зрения, гласящая примерно следующее:рамках
-                своих собственных рациональных ограничений.
+                Расскажем Вам все о IT простым языком, чтобы не загружать Вашу
+                голову!
               </p>
             </li>
             <li class="advantages_item">
               <img src="./img/Folder 1.png" alt="Folder" />
-              <p class="caption">Второе</p>
+              <p class="caption">Актуальность</p>
               <p class="description">
-                Имеется спорная точка зрения, гласящая примерно следующее:рамках
-                своих собственных рациональных ограничений.
+                Для легкого выбора мы собрали для Вас самую актуальную
+                информацию.
               </p>
             </li>
             <li class="advantages_item">
               <img src="./img/Processor 1.png" alt="Processor" />
-              <p class="caption">Третье</p>
+              <p class="caption">Обучение</p>
               <p class="description">
-                Имеется спорная точка зрения, гласящая примерно следующее:рамках
-                своих собственных рациональных ограничений.
+                Если вам понравилась та или иная сфера, Вы можете записаться на
+                курс обучения!
               </p>
             </li>
           </ul>
@@ -79,68 +91,63 @@
               <div class="container review_container">
                 <img src="./img/Ellipse 271.png" alt="Userpic" />
                 <p class="subtitle review_subtitle">
-                  Но высокое качество позиционных исследований в значительной
-                  степени обусловливает важность глубокомысленных рассуждений.
+                  IT сфера очень популярна в наше время и разобраться в ней
+                  довольно сложно...
                 </p>
-                <p class="user_text">Иванов Иван, CEO Steam</p>
+                <p class="user_text">Иван Иванов, Студент</p>
               </div>
             </div>
             <div class="review_item">
               <div class="container review_container">
-                <img src="./img/Ellipse 271.png" alt="Userpic" />
+                <img src="./img/thomas_cabus1.png" alt="Userpic" />
                 <p class="subtitle review_subtitle">
-                  Но высокое качество позиционных исследований в значительной
-                  степени обусловливает важность глубокомысленных рассуждений.
+                  Полезный сайт, очень много информации которая поможет
+                  новичкам!
                 </p>
-                <p class="user_text">Иванов Иван, CEO Steam</p>
+                <p class="user_text">Кирилл Кириллович, Разработчик</p>
               </div>
             </div>
-            <div class="review_item">
-              <div class="container review_container">
-                <img src="./img/Ellipse 271.png" alt="Userpic" />
-                <p class="subtitle review_subtitle">
-                  Но высокое качество позиционных исследований в значительной
-                  степени обусловливает важность глубокомысленных рассуждений.
-                </p>
-                <p class="user_text">Иванов Иван, CEO Steam</p>
-              </div>
-            </div>
+            <a href="#" class="review_link">Смотреть отзывы</a>
           </div>
           <p class="heading review_heading">Оставьте Ваш отзыв</p>
           <p class="excerpt">
-            Противоположная точка зрения подразумевает, что представители
-            современных социальных резервов могут быть своевременно
-            верифицированы.
+            Каждый день мы работаем над тем, чтобы стать лучше! Нам очень важно
+            знать Ваше мнение о нашем проекте и качестве информации на нём.
           </p>
           <div class="review_flex">
             <div class="review_flex_item">
-              <p>Сам отзыв</p>
-              <input type="text" class="review_input" />
+              <p>Ваш отзыв</p>
+              <textarea name="review" id="" cols="30" rows="10"></textarea>
             </div>
             <div class="review_flex_item">
               <p>Эл. почта</p>
               <input type="text" class="email_input" />
             </div>
             <div class="review_flex_item">
-              <p>Полное имя</p>
+              <p>Ваше имя</p>
               <input type="text" class="name_input" />
             </div>
-            <button class="review_button">Отправить</button>
+            <a href="#" class="review_button"><span>Отправить</span></a>
           </div>
         </div>
       </div>
       <div class="schools">
         <div class="container">
-          <div class="heading">IT Школы</div>
+          <div class="heading">Курсы</div>
           <ul class="schools_list">
             <div class="school_card">
               <div class="container school_card_container">
                 <div>
-                  <img src="./img/unsplash_pEgsWN0kwbQ.png" alt="school" />
-                  <p class="subtitle subtitle_school">MyFreedom</p>
+                  <img
+                    src="./img/how-to-become-a-project-manager.jpg"
+                    alt="school"
+                  />
+                  <p class="subtitle subtitle_school">Курс PM</p>
                 </div>
                 <div class="school_link">
-                  <p>Узнать больше</p>
+                  <a href="https://myfreedom.by/courses/pm" target="_blank"
+                    >Узнать</a
+                  >
                   <img src="./img/arrow-right.png" alt="arrow" />
                 </div>
               </div>
@@ -148,11 +155,31 @@
             <div class="school_card">
               <div class="container school_card_container">
                 <div>
-                  <img src="./img/unsplash_pEgsWN0kwbQ.png" alt="school" />
-                  <p class="subtitle subtitle_school">MyFreedom</p>
+                  <img src="./img/unsplash_dJw88I9GeNI.png" alt="school" />
+                  <p class="subtitle subtitle_school">Курс Web Dev</p>
                 </div>
                 <div class="school_link">
-                  <p>Узнать больше</p>
+                  <a href="https://myfreedom.by/courses/dev" target="_blank"
+                    >Узнать</a
+                  >
+                  <img src="./img/arrow-right.png" alt="arrow" />
+                </div>
+              </div>
+            </div>
+          </ul>
+          <ul class="schools_list">
+            <div class="school_card">
+              <div class="container school_card_container">
+                <div>
+                  <img src="./img/unsplash_AIIC6wCqkQc.png" alt="school" />
+                  <p class="subtitle subtitle_school">Курс UX/UI</p>
+                </div>
+                <div class="school_link">
+                  <a
+                    href="https://myfreedom.by/courses/web-design"
+                    target="_blank"
+                    >Узнать</a
+                  >
                   <img src="./img/arrow-right.png" alt="arrow" />
                 </div>
               </div>
@@ -160,23 +187,13 @@
             <div class="school_card">
               <div class="container school_card_container">
                 <div>
-                  <img src="./img/unsplash_pEgsWN0kwbQ.png" alt="school" />
-                  <p class="subtitle subtitle_school">MyFreedom</p>
+                  <img src="./img/studio-republic-9790.jpg" alt="school" />
+                  <p class="subtitle subtitle_school">Курс QA</p>
                 </div>
                 <div class="school_link">
-                  <p>Узнать больше</p>
-                  <img src="./img/arrow-right.png" alt="arrow" />
-                </div>
-              </div>
-            </div>
-            <div class="school_card">
-              <div class="container school_card_container">
-                <div>
-                  <img src="./img/unsplash_pEgsWN0kwbQ.png" alt="school" />
-                  <p class="subtitle subtitle_school">MyFreedom</p>
-                </div>
-                <div class="school_link">
-                  <p>Узнать больше</p>
+                  <a href="https://myfreedom.by/courses/qa" target="_blank"
+                    >Узнать</a
+                  >
                   <img src="./img/arrow-right.png" alt="arrow" />
                 </div>
               </div>
