--- a/index2.html
+++ b/index2.html
@@ -21,12 +21,26 @@
           <a class="logo" href="index.html">
             <div class="logo">IT Conductor</div>
           </a>
-          <nav class="menu">
+          <nav class="nav">
             <a href="./index.html">Главная</a>
             <a href="index3.html">Front/Back-end</a>
             <a href="index4.html">UX/UI</a>
+            <a class="pm_link" href="index2.html">PM</a>
             <a href="index5.html">QA</a>
           </nav>
+          <div class="burger">
+            <label>
+              <input type="checkbox" />
+              <span class="menu"> <span class="hamburger"></span> </span>
+              <ul>
+                <li><a href="./index.html">Главная</a></li>
+                <li><a href="index3.html">Front/Back-end</a></li>
+                <li><a href="index4.html">UX/UI</a></li>
+                <li><a href="index2.html">PM</a></li>
+                <li><a href="index5.html">QA</a></li>
+              </ul>
+            </label>
+          </div>
         </div>
       </header>
       <div class="greeting">
@@ -44,64 +58,263 @@
       <div class="container">
         <div class="pm_description">
           <div class="pm_description_image">
-            <img
-              src="./img/how-to-become-a-project-manager.jpg
-            "
-              alt="PM"
-            />
+            <img src="./img/c185fd837bc26fa26a3d2de466a646c6.png" alt="" />
           </div>
           <div class="pm_description_text">
             <p class="heading pm_heading">Кто такой Project Manager?</p>
             <p class="caption pm_caption">
-              <b>PM</b> — это человек, который выполняет эти задачи в области
-              разработки ПО. Он общается с клиентом и выясняет его потребности,
-              следит за каждым этапом разработки и отчитывается заказчику о ходе
-              создания продукта. Проджект менеджеры неустанно следят за каждой
-              деталью механизма создания продукта. 
+              <b>PM</b> — это специалист, чьей главной задачей является
+              управление проектом в целом: проектирование и расстановка
+              приоритетов, планирование выполнения задач, контроль,
+              коммуникации, а также оперативное решение проблем.
             </p>
           </div>
         </div>
+
         <div class="advantages">
-            <div class="container">
-              <p class="heading heading_advantages">Навыки Project Manager</p>
-              <ul class="advantages_list">
-                <li class="advantages_item">
-                  <img src="./img/iMac 1.png" alt="Computer" />
-                  <p class="caption">Первое</p>
-                  <p class="description">
-                    Имеется спорная точка зрения, гласящая примерно следующее:рамках
-                    своих собственных рациональных ограничений.
-                  </p>
-                </li>
-                <li class="advantages_item">
-                  <img src="./img/Folder 1.png" alt="Folder" />
-                  <p class="caption">Второе</p>
-                  <p class="description">
-                    Имеется спорная точка зрения, гласящая примерно следующее:рамках
-                    своих собственных рациональных ограничений.
-                  </p>
-                </li>
-                <li class="advantages_item">
-                  <img src="./img/Processor 1.png" alt="Processor" />
-                  <p class="caption">Третье</p>
-                  <p class="description">
-                    Имеется спорная точка зрения, гласящая примерно следующее:рамках
-                    своих собственных рациональных ограничений.
-                  </p>
-                </li>
-              </ul>
+          <p class="heading heading_advantages">Навыки Project Manager'a</p>
+          <ul class="advantages_list">
+            <li class="advantages_item">
+              <img src="./img/iMac 1.png" alt="Computer" />
+              <p class="caption">Навыки планирования</p>
+              <p class="description">
+                PM начинает свой день с составления задач на текущий день и
+                проверки выполненной работы за прошедший день. Без такого
+                мониторинга невозможна работа менеджера. Поэтому навыки
+                планирования крайне важны для построения успешной карьеры на
+                данной позиции.
+              </p>
+            </li>
+            <li class="advantages_item">
+              <img src="./img/Folder 1.png" alt="Folder" />
+              <p class="caption">Умение мотивировать</p>
+              <p class="description">
+                Умение правильно подбирать мотивацию – одно из важнейших качеств
+                менеджера проектов. Он должен «продать» проект не только
+                заказчику, но и своей команде: «вкусно» подать задачи, описать
+                выгоды так, чтобы выполнение проекта было в удовольствие.
+              </p>
+            </li>
+            <li class="advantages_item">
+              <img src="./img/Processor 1.png" alt="Processor" />
+              <p class="caption">Организованность</p>
+              <p class="description">
+                Менеджер проектов координирует работу множества участников из
+                различных подразделений компании. Поэтому успешный PM должен
+                быть очень организованным человеком и учитывать при управлении
+                проектом каждый аспект.
+              </p>
+            </li>
+          </ul>
+        </div>
+        <div class="work">
+          <div class="work_container">
+            <div class="heading">Обязанности Project Manager'a</div>
+            <div class="excerpt work_excerpt">
+              Представленная должность охватывает большой набор задач, функций и
+              обязанностей. Управление проектами можно смело назвать полноценной
+              наукой, так как в процессе работы сотруднику приходится
+              сталкиваться с различными, иногда достаточно специфическими,
+              задачами. Что делает проджект менеджер – чек-лист основных задач:
+            </div>
+            <div class="work_list">
+              <div class="work_item">
+                <div class="minus"></div>
+                <div class="work_text">
+                  Работа непосредственно над проектом от участия в генерации
+                  идеи и до составления отчетности. Этот блок работы
+                  предполагает разработку и утверждение общей концепции, подбор
+                  команды с последующим мониторингом каждого этапа, контроль за
+                  исполнением и сроками.
+                </div>
+              </div>
+              <div class="work_item">
+                <div class="minus"></div>
+                <div class="work_text">
+                  Коммуникация с заказчиками. Да, project manager – тот человек,
+                  который всегда остается на связи, отвечает на вопросы,
+                  согласовывает спорные моменты, разрешает конфликтные ситуации,
+                  представляет и отчитывается за проделанную работу.
+                </div>
+              </div>
+              <div class="work_item">
+                <div class="minus"></div>
+                <div class="work_text">
+                  Следование интересам компании. В этой деятельности клиент «не
+                  всегда прав». Соответственно, РМ должен действовать так, чтобы
+                  интересы клиента в точности соответствовали интересам
+                  компании.
+                </div>
+              </div>
+              <div class="work_item">
+                <div class="minus"></div>
+                <div class="work_text">
+                  Работа с коллективом. Разработав концепцию, специалист
+                  совместно с руководителем формирует собственную команду,
+                  назначая исполнителей. Эксперт должен уметь не только
+                  выставлять задачи, но и помогать, поддерживать, мотивировать и
+                  при необходимости отстаивать интересы исполнителя.
+                </div>
+              </div>
+              <div class="work_item">
+                <div class="minus"></div>
+                <div class="work_text">
+                  Ведение документации, составление отчетности за каждый
+                  проделанный этап.
+                </div>
+              </div>
+            </div>
+            <div class="excerpt work_excerpt">
+              У project manager зарплата отражает высокий уровень
+              ответственности и многозадачность. Актуальные суммы обусловлены
+              нагрузкой, спецификой деятельности и широким спектром задач на
+              указанной позиции.
+            </div>
+            <img src="./img/ae7bc71f0df37e3d2978b2aa12c2e669.png" alt="" />
+            <div class="pros">
+              <div class="pros_container">
+                <div class="heading">Плюсы профессии</div>
+                <div class="excerpt">
+                  Да, проджект менеджером быть достаточно сложно, но вместе с
+                  этим деятельность предполагает ряд плюсов, из-за которых она
+                  становится все более привлекательной на рынке. Основные из
+                  них:
+                </div>
+                <div class="pros_list">
+                  <div class="pros_item">
+                    <div class="minus"></div>
+                    <div class="work_text">постоянное развитие</div>
+                  </div>
+                  <div class="pros_item">
+                    <div class="minus"></div>
+                    <div class="work_text">хороший доход</div>
+                  </div>
+                  <div class="pros_item">
+                    <div class="minus"></div>
+                    <div class="work_text">
+                      эффективное управление не только проектами, но и своей
+                      жизнью
+                    </div>
+                  </div>
+                  <div class="pros_item">
+                    <div class="minus"></div>
+                    <div class="work_text">
+                      возможность научиться тонкостям коммуникации
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="pros">
+              <div class="pros_container">
+                <div class="heading">Минусы профессии</div>
+                <div class="excerpt">
+                  Как и любая деятельность, представленное направление имеет ряд
+                  минусов. Основные недостатки профессии:
+                </div>
+                <div class="pros_list">
+                  <div class="pros_item">
+                    <div class="minus"></div>
+                    <div class="work_text">
+                      Постоянный стресс, так как главная задача специалиста –
+                      принять, проработать и передать большое количество
+                      информации. В большинстве случаев в конце дня хочется
+                      просто тишины и спокойствия.
+                    </div>
+                  </div>
+                  <div class="pros_item">
+                    <div class="minus"></div>
+                    <div class="work_text">
+                      Моральная ответственность. Первое, что должен знать
+                      project manager, – за любой «промах» придется отвечать
+                      ему. Важно понимать, что в случае, если проект не
+                      понравится заказчику или попросту «утонет», волна
+                      недовольства накроет того, кто все контролировал.
+                    </div>
+                  </div>
+                  <div class="pros_item">
+                    <div class="minus"></div>
+                    <div class="work_text">
+                      Помимо творчества и креатива работа связана с
+                      документооборотом. В процессе придется заполнять массу
+                      отчетов, вести документацию, составлять технические
+                      задания и т.д.
+                    </div>
+                  </div>
+                  <div class="pros_item">
+                    <div class="minus"></div>
+                    <div class="work_text">
+                      Многозадачность. Не стоит думать, что менеджер приходит на
+                      работу и занимается четким перечнем дел. В большинстве
+                      случаев бывает так: как только сотрудник, например, пишет
+                      письмо заказчику, на него резко «падают» вопросы от
+                      программистов, дизайнеров, недовольство менеджеров и т.д.
+                      Самое интересное начинается, когда специалист работает
+                      сразу на нескольких проектах.
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
+        </div>
+        <div class="salary">
+          <div class="salary_container">
+            <div class="heading">Зарплаты</div>
+            <div class="excerpt salary_excerpt">
+              Зарплата специалиста будет варьироваться в зависимости от его
+              стажа, а также опыта его работы.<br />
+              На данном графике изображена зависимость зарплаты от стажа работы
+              менеджера проекта.
+            </div>
+            <img src="./img/5-01.png" alt="" />
+          </div>
+        </div>
+        <div class="course">
+          <div class="cource_container">
+            <p class="heading">Запись на курс</p>
+            <p class="excerpt">
+              Окунитесь в профессию менеджера IT-проектов. Вместе с Myfreedom
+              пройдите все этапы управления проектом.
+            </p>
+            <a
+              href="https://myfreedom.by/courses/pm"
+              class="course_button"
+              target="_blank"
+              ><span>Записаться</span></a
+            >
+          </div>
+        </div>
+        <p class="heading review_heading">Оставьте Ваш отзыв</p>
+        <p class="excerpt">
+          Каждый день мы работаем над тем, чтобы стать лучше! Нам очень важно
+          знать Ваше мнение о нашем проекте и качестве информации на нём.
+        </p>
+        <div class="review_flex">
+          <div class="review_flex_item">
+            <p>Ваш отзыв</p>
+            <textarea name="review" id="" cols="30" rows="10"></textarea>
+          </div>
+          <div class="review_flex_item">
+            <p>Эл. почта</p>
+            <input type="text" class="email_input" />
+          </div>
+          <div class="review_flex_item">
+            <p>Ваше имя</p>
+            <input type="text" class="name_input" />
+          </div>
+          <a href="#" class="review_button"><span>Отправить</span></a>
+        </div>
       </div>
     </main>
     <footer>
-        <nav class="menu footer_menu">
-          <a href="./index.html">Главная</a>
-          <a href="index3.html">Front/Back-end</a>
-          <a href="index4.html">UX/UI</a>
-          <a href="index5.html">QA</a>
-        </nav>
-        <p class="copy">Copyright IT Conductor, 2022</p>
-      </footer>
+      <nav class="menu footer_menu">
+        <a href="./index.html">Главная</a>
+        <a href="index3.html">Front/Back-end</a>
+        <a href="index4.html">UX/UI</a>
+        <a href="index5.html">QA</a>
+      </nav>
+      <p class="copy">Copyright IT Conductor, 2022</p>
+    </footer>
   </body>
 </html>
