--- a/index3.html
+++ b/index3.html
@@ -23,6 +23,7 @@
           </a>
           <nav class="menu">
             <a href="./index.html">Главная</a>
+            <a class="dev_link" href="index3.html">Front/Back-end</a>
             <a href="index4.html">UX/UI</a>
             <a href="index2.html">PM</a>
             <a href="index5.html">QA</a>
