--- a/index4.html
+++ b/index4.html
@@ -24,6 +24,7 @@
           <nav class="menu">
             <a href="./index.html">Главная</a>
             <a href="index3.html">Front/Back-end</a>
+            <a class="ux_link" href="index4.html">UX/UI</a>
             <a href="index2.html">PM</a>
             <a href="index5.html">QA</a>
           </nav>
