--- a/index5.html
+++ b/index5.html
@@ -26,6 +26,7 @@
             <a href="index3.html">Front/Back-end</a>
             <a href="index4.html">UX/UI</a>
             <a href="index2.html">PM</a>
+            <a class="qa_link" href="index5.html">QA</a>
           </nav>
         </div>
       </header>
