Adaptive for main,pm

--- a/index3.html
+++ b/index3.html
@@ -21,8 +21,9 @@
           <a class="logo" href="index.html">
             <div class="logo">IT Conductor</div>
           </a>
-          <nav class="menu">
+          <nav class="nav">
             <a href="./index.html">Главная</a>
+            <a class="dev_link" href="index3.html">Front/Back-end</a>
             <a href="index4.html">UX/UI</a>
             <a href="index2.html">PM</a>
             <a href="index5.html">QA</a>
