--- a/index5.html
+++ b/index5.html
@@ -21,11 +21,12 @@
           <a class="logo" href="index.html">
             <div class="logo">IT Conductor</div>
           </a>
-          <nav class="menu">
+          <nav class="nav">
             <a href="./index.html">Главная</a>
             <a href="index3.html">Front/Back-end</a>
             <a href="index4.html">UX/UI</a>
             <a href="index2.html">PM</a>
+            <a class="qa_link" href="index5.html">QA</a>
           </nav>
         </div>
       </header>
@@ -82,6 +83,7 @@
               </ul>
             </div>
           </div>
+          
       </div>
     </main>
     <footer>
