--- a/index4.html
+++ b/index4.html
@@ -21,12 +21,26 @@
           <a class="logo" href="index.html">
             <div class="logo">IT Conductor</div>
           </a>
-          <nav class="menu">
+          <nav class="nav">
             <a href="./index.html">Главная</a>
             <a href="index3.html">Front/Back-end</a>
+            <a class="ux_link" href="index4.html">UX/UI</a>
             <a href="index2.html">PM</a>
             <a href="index5.html">QA</a>
           </nav>
+          <div class="burger">
+            <label>
+              <input type="checkbox" />
+              <span class="menu"> <span class="hamburger"></span> </span>
+              <ul>
+                <li><a href="./index.html">Главная</a></li>
+                <li><a href="index3.html">Front/Back-end</a></li>
+                <li><a href="index4.html">UX/UI</a></li>
+                <li><a href="index2.html">PM</a></li>
+                <li><a href="index5.html">QA</a></li>
+              </ul>
+            </label>
+          </div>
         </div>
       </header>
       <div class="greeting">
@@ -56,79 +70,43 @@
               пользоваться.
             </p>
           </div>
+          <div class="pm_description_text">
+            <p class="heading pm_heading">Кто такой UI дизайнер?</p>
+            <p class="caption pm_caption">
+              <b>UI дизайнер</b> отвечает за то, как выглядит интерфейс продукта и как пользователь взаимодействует с его элементами. Но нужно понимать, что помимо графического интерфейса есть голосовой, тактильный и звуковой. Ими также занимается ui-специалист, но графический — самый распространенный среди его задач.
+            </p>
+          </div>
         </div>
         <div class="advantages">
           <div class="container">
-            <p class="heading heading_advantages">Навыки UX дизайнера</p>
+            <p class="heading heading_advantages">Навыки UX/UI дизайнера</p>
             <ul class="advantages_list">
               <li class="advantages_item">
                 <img src="./img/iMac 1.png" alt="Computer" />
-                <p class="caption">Первое</p>
+                <p class="caption">Маркетинг</p>
                 <p class="description">
-                  Имеется спорная точка зрения, гласящая примерно
-                  следующее:рамках своих собственных рациональных ограничений.
+                  Необходимо уметь составить портрет целевой аудитории, оформить уникальное торговое предложение, сделать анализ конкурентов.
                 </p>
               </li>
               <li class="advantages_item">
                 <img src="./img/Folder 1.png" alt="Folder" />
-                <p class="caption">Второе</p>
+                <p class="caption">Аналитика</p>
                 <p class="description">
-                  Имеется спорная точка зрения, гласящая примерно
-                  следующее:рамках своих собственных рациональных ограничений.
+                  Важно владеть методологиями анализа бизнес-задач и знать, как составить карту пользовательских путей для достижения целей этих задач.
                 </p>
               </li>
               <li class="advantages_item">
                 <img src="./img/Processor 1.png" alt="Processor" />
-                <p class="caption">Третье</p>
+                <p class="caption">Психология</p>
                 <p class="description">
-                  Имеется спорная точка зрения, гласящая примерно
-                  следующее:рамках своих собственных рациональных ограничений.
+                  Поможет использовать паттерны поведения пользователей и принципы визуального восприятия.
                 </p>
               </li>
+              <div class="excerpt">Здесь были перечислены только основные навыки. Стоит учитывать что стать дизайнером не получится без <b>технических знаний</b>, а также <b>насмотренности</b>.</div>
             </ul>
           </div>
-          <div class="pm_description">
-            <div class="pm_description_image">
-              <img src="./img/1_HEjWUJLbcD-5rwAykRzSEQ.png" alt="ux" />
-            </div>
-            <div class="pm_description_text">
-              <p class="heading pm_heading">Кто такой UI дизайнер?</p>
-              <p class="caption pm_caption">
-                <b>UI дизайнер</b> отвечает за то, как выглядит интерфейс продукта и как пользователь взаимодействует с его элементами. Но нужно понимать, что помимо графического интерфейса есть голосовой, тактильный и звуковой. Ими также занимается ui-специалист, но графический — самый распространенный среди его задач.
-              </p>
-            </div>
-          </div>
-          <div class="advantages">
-            <div class="container">
-              <p class="heading heading_advantages">Навыки UX дизайнера</p>
-              <ul class="advantages_list">
-                <li class="advantages_item">
-                  <img src="./img/iMac 1.png" alt="Computer" />
-                  <p class="caption">Первое</p>
-                  <p class="description">
-                    Имеется спорная точка зрения, гласящая примерно
-                    следующее:рамках своих собственных рациональных ограничений.
-                  </p>
-                </li>
-                <li class="advantages_item">
-                  <img src="./img/Folder 1.png" alt="Folder" />
-                  <p class="caption">Второе</p>
-                  <p class="description">
-                    Имеется спорная точка зрения, гласящая примерно
-                    следующее:рамках своих собственных рациональных ограничений.
-                  </p>
-                </li>
-                <li class="advantages_item">
-                  <img src="./img/Processor 1.png" alt="Processor" />
-                  <p class="caption">Третье</p>
-                  <p class="description">
-                    Имеется спорная точка зрения, гласящая примерно
-                    следующее:рамках своих собственных рациональных ограничений.
-                  </p>
-                </li>
-              </ul>
-            </div>
-        </div>
+          
+         
       </div>
     </main>
     <footer>
